--- a/project.yml
+++ b/project.yml
@@ -4,7 +4,7 @@ settings:
   CURRENT_PROJECT_VERSION: 1
 options:
   bundleIdPrefix: com.example
-  postGenCommand: pod install --clean-install;
+  postGenCommand: pod install --verbose --clean-install;
 targets:
   MVVM-Combine-SwiftUI:
     type: application
